--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <!-- font awsesome link  -->
+     <script src="https://kit.fontawesome.com/1b47cf53c0.js" crossorigin="anonymous"></script>
+      <!-- css link  -->
+    <link rel="stylesheet" href="css/style.css">
     <!-- bootstrap linked -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="icon" href="images/favicon.png" >
     <title>Phone Planet is The most unique site in BD!</title>
 </head>
-<body class="container">
-    <h1 class="text-center">Hello world!</h1>
-    <script src="phone-planet.js"></script>
+<body class="container bg-primary">
+     <!-- header|input|button starts here  -->
+    <header class="text-center text-white">
+       <div class="d-inline">
+          <img src="images/planet-logo.png" alt="" class="w-25">
+          <h2>Phone <span>Planet</span></h2>
+        </div>
+     <div class="input-group w-50 mx-auto">
+          <input id="search-phone" type="text" class="form-control" placeholder="Discover your planet">
+  
+          <button onclick="searchPhone()" class="btn btn-outline-warning" type="button" id="btn-search">Explore</button>
+      </div>
+      </header> <br>
+       <!-- header|input|button end here  -->
+
+
+
+    <!-- external js link  -->
+    <script src="js/phone-planet.js"></script>
+    <!-- bootstrap js link  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
