search result function & loope & innerhtml added

--- a/index.html
+++ b/index.html
@@ -28,8 +28,25 @@
       </header> <br>
        <!-- header|input|button end here  -->
 
+ <!-- main section starts here  -->
+ <main>
+    <div>
+      <p id="message" class="fs-1 fw-bolder text-warning text-center">Result not Available <i class="fas fa-thumbs-up"></i></p>
+    </div>
 
+     <!-- Given massage here     -->
+     <div>
+        <p id="error-message" class="fs-1 fw-bolder text-warning text-center">Result not Available <i class="fas fa-thumbs-up"></i></p>
+      </div>
 
+      <!-- phone-details -->
+      <div id="phone-details" class="mb-4">
+    </div>
+
+    <!-- display search result -->
+    <div id="search-result" class="row row-cols-1 row-cols-md-3 g-5 mb-4">            
+    </div>
+</main>
     <!-- external js link  -->
     <script src="js/phone-planet.js"></script>
     <!-- bootstrap js link  -->
