get phone-details & created cols

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
      <!-- Given massage here     -->
      <div>
-        <p id="error-message" class="fs-1 fw-bolder text-warning text-center">Result not Available <i class="fas fa-thumbs-up"></i></p>
+        <p id="message" class="fs-1 fw-bolder text-warning text-center">Result not Available <i class="fas fa-thumbs-up"></i></p>
       </div>
 
       <!-- phone-details -->
