spinner Added & ready to visit

--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
       </div>
       </header> <br>
        <!-- header|input|button end here  -->
+       
  <!-- main section starts here  -->
  <main>
-    <div>
-      <p id="message" class="fs-1 fw-bolder text-warning text-center">Result not Available <i class="fas fa-thumbs-up"></i></p>
-    </div>
+
+     <!-- loading spinner start Here -->
+   <div class="spinner-border text-warning" id="spinner" role="status">
+  <span class="visually-hidden">Loading...</span>
+</div>
+  <!-- loading spinner end Here -->
 
      <!-- Given massage here     -->
      <div>
